--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /* --- FONTS --- */
 @font-face {
   font-family: "GreatVibes";
-  src: url("./fonts/primary.ttf");
+  src: url("assets/fonts/primary.ttf");
 }
 
 @font-face {
   font-family: "Playfair";
-  src: url("./fonts/primary.ttf");
+  src: url("assets/fonts/primary.ttf");
 }
 
 /* --- RESET & BASE --- */
@@ -240,7 +240,6 @@ body {
   border-radius: 25px;
   font-family: "Playfair", serif;
   font-size: 11px;
-  font-weight: bold;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -512,7 +511,6 @@ body {
   border-radius: 20px;
   font-family: "Playfair", serif;
   font-size: 11px;
-  font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 1px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -670,7 +668,6 @@ body {
   border-radius: 20px;
   font-family: "Playfair", serif;
   font-size: 12px;
-  font-weight: bold;
   cursor: pointer;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -1017,6 +1014,7 @@ body {
   border: 1px solid rgba(255, 255, 255, 0.4);
   padding: 5px 12px;
   border-radius: 20px;
+  font-family: "Playfair", serif;
   font-size: 10px;
   cursor: pointer;
   transition: 0.3s;
@@ -1072,8 +1070,8 @@ body {
   text-decoration: none;
   text-align: center;
   border-radius: 25px;
+  font-family: "Playfair", serif;
   font-size: 11px;
-  font-weight: bold;
 }
 
 #frame9 {
