--- a/style.css
+++ b/style.css
@@ -1688,4 +1688,26 @@ body {
   flex-direction: column;
   align-items: center !important;
   /* Force center alignment */
+}/* --- GALLERY MODAL STYLE --- */
+.gallery-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100dvh;
+  z-index: 20000;
+  background-color: #000;
+  overflow-y: auto;
+}
+
+.gallery-modal .gallery-container {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.gallery-modal .btn-back-floating {
+  position: fixed;
+  bottom: 30px;
+  z-index: 20001; 
 }
